use json structure for line content